--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <form class="gridContainer">
                 <input class="fName" type="text" placeholder="First Name"/>
                 <input class="lName" type="text" placeholder="Last Name"/> 
-                <input class="phone" type="number" placeholder="Mobile No."/>
+                <input class="phone" type="tel" placeholder="Mobile No."/>
                 <input class="email" type="email" placeholder="Email Address"/>
                 <input class="password" type="password" placeholder="Password"/>
                 <input class="password2" type="password" placeholder="Confirm Password"/>
@@ -25,8 +25,8 @@
                 </div>
                 <p class="TOS">By clicking <button class="smallRegister" type="submit">Register</button>, you agree to the <a href="#">Terms and Conditions</a>
                     set out by this site, including Cookie Use.</p>
-                <button class="register" type="submit">Register</button>
-                <button class="signIn" type="submit">Sign In</button> 
+                <button class="button register" type="button">Register</button>
+                <button class="button signIn" type="button">Sign In</button> 
             </form> 
         </main>
         
